--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 ###### Requirements without Version Specifiers ######
 argparse
-importlib
+deepspeed
+'''
+deepspeed 패키지 설치 오류가 발생한다면 nvcc -V 커맨드 확인 후,
+not found error라면 nvidia toolkit을 설치해야 합니다.
+'''
 
 ###### Requirements with Version Specifiers ######
-pandas==1.1.5
-scikit-learn~=0.24.1
-transformers==4.10.0
-torch==1.12.1
+pandas
+scikit-learn
+transformers
+torch==1.13.1
 wandb==0.16.1
 pytorch-lightning==2.1.3
