feat - Data - 학습된 모델의 추론결과를 분석하기 위해 Confusion matrix 추가
#17

--- a/configs/base_config.json
+++ b/configs/base_config.json
@@ -18,7 +18,8 @@
         "infer_batch_size": 32,
         "max_epoch": 1,
         "shuffle": true,
-        "learning_rate": 1e-5
+        "learning_rate": 1e-5,
+        "val_mode": false
     },
 
     "path": {
