feat - Docs - gitignore file update
#28

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 ### Manual ###
 dataset/*
 wandb/*
+best_model/*
+encoding/*
+prediction/klue_*.csv
+lightning_logs/*
+pipeline.ipynb
 
 
 ### JupyterNotebooks ###
