feat - Data - data augment code update
#32

--- a/configs/mlm_augmentation_config.json
+++ b/configs/mlm_augmentation_config.json
@@ -3,6 +3,8 @@
     
     "augment_target" : 1000,
     
+    "masking_num" : 5,
+    
     "model_name" : "meenham/tapt-roberta-large-bs256-ep100",
     
     "data_path" : { 
