--- a/configs/mlm_augmentation_config.json
+++ b/configs/mlm_augmentation_config.json
@@ -3,13 +3,14 @@
     
     "augment_target" : 1000,
     
-    "masking_num" : 5,
-    
+    "masking_num" : 8,
+
     "model_name" : "meenham/tapt-roberta-large-bs256-ep100",
     
     "data_path" : { 
         "train_path" : "./dataset/without_dup_train.csv",
         "val_path" : "./dataset/without_dup_dev.csv"
-    }
+    },
 
+    "train_aug" : false
 }
