feat - Data - data augmenation update
#32

--- a/configs/mlm_augmentation_config.json
+++ b/configs/mlm_augmentation_config.json
@@ -12,5 +12,11 @@
         "val_path" : "./dataset/without_dup_dev.csv"
     },
 
-    "train_aug" : false
+    "train_aug" : false,
+
+    "threshold" : {
+        "train" : 900,
+        "val" : 100
+    }
+
 }
