--- a/configs/pretrained_roberta-large_entity_config.json
+++ b/configs/pretrained_roberta-large_entity_config.json
@@ -2,16 +2,16 @@
     "seed": 42,
 
     "wandb": {
-        "wandb_run_name" : "pretrained-roberta-large/representation-klue(stratified)",
+        "wandb_run_name" : "pretrained-roberta-large/representation-typed_punct_marker",
         "wandb_project_name": "yewon_project",
         "wandb_entity_name": "be-our-friend"        
     },
     
     "arch": {
-        "model_name": "NLPBada/klue-roberta-large-tapt-bs256-ep30",
+        "model_name": "meenham/tapt-roberta-large-bs256-ep100",
         "selected_model": "EntityMarkerModel",
-        "model_detail": "representation-klue-v1",
-        "representation_style": "klue"
+        "model_detail": "representation-typed_punct_marker",
+        "representation_style": "typed_punct_marker"
     },
 
     "trainer": {
@@ -24,9 +24,9 @@
     },
 
     "path": {
-        "train_path": "./dataset/stratified_without_dup_train.csv",
-        "dev_path": "./dataset/stratified_without_dup_dev.csv",
-        "test_path": "./dataset/stratified_without_dup_dev.csv",
+        "train_path": "./dataset/without_dup_train.csv",
+        "dev_path": "./dataset/without_dup_dev.csv",
+        "test_path": "./dataset/without_dup_dev.csv",
         "predict_path": "./dataset/test.csv"
     },
 
