Modify config files

--- a/configs/pretrained_roberta-large_pooling_config.json
+++ b/configs/pretrained_roberta-large_pooling_config.json
@@ -2,15 +2,15 @@
     "seed": 42,
 
     "wandb": {
-        "wandb_run_name" : "pretrained-roberta-large/representation-typed_punct_marker",
+        "wandb_run_name" : "pretrained-roberta-large/representation-typed_punct_marker-pooling",
         "wandb_project_name": "yewon_project",
         "wandb_entity_name": "be-our-friend"        
     },
     
     "arch": {
         "model_name": "meenham/tapt-roberta-large-bs256-ep100",
-        "selected_model": "EntityMarkerModel",
-        "model_detail": "representation-typed_punct_marker",
+        "selected_model": "EntityMarkerPoolingModel",
+        "model_detail": "representation-typed_punct_marker-pooling",
         "representation_style": "typed_punct_marker"
     },
 
@@ -30,6 +30,8 @@
         "predict_path": "./dataset/test.csv"
     },
 
-    "deepspeed": true
+    "deepspeed": true,
+    
+    "pooling" : true
 
 }
