Modify config files

--- a/configs/pretrained_roberta-large_endtoken_config.json
+++ b/configs/pretrained_roberta-large_endtoken_config.json
@@ -2,15 +2,15 @@
     "seed": 42,
 
     "wandb": {
-        "wandb_run_name" : "pretrained-roberta-large/representation-typed_punct_marker",
+        "wandb_run_name" : "pretrained-roberta-large/representation-typed_punct_marker-endtoken",
         "wandb_project_name": "yewon_project",
         "wandb_entity_name": "be-our-friend"        
     },
     
     "arch": {
         "model_name": "meenham/tapt-roberta-large-bs256-ep100",
-        "selected_model": "EntityMarkerModel",
-        "model_detail": "representation-typed_punct_marker",
+        "selected_model": "EntityMarkerEndtokenModel",
+        "model_detail": "representation-typed_punct_marker-endtoken",
         "representation_style": "typed_punct_marker"
     },
 
@@ -32,6 +32,6 @@
 
     "deepspeed": true,
     "pooling" : false,
-    "endtoken" : false
+    "endtoken" : true
 
 }
