Fix syntax error in base_config.json
Merge하면서 생긴 syntax error 수정

--- a/configs/base_config.json
+++ b/configs/base_config.json
@@ -11,7 +11,7 @@
         "model_name": "klue/bert-base",
         "selected_model": "Model",
         "model_detail": "v",
-        "representation_style": "None"
+        "representation_style": "None",
         "loss_func": "focal"
     },
 
