feat - Data - data augmentation code completed
#32

--- a/configs/mlm_augmentation_config.json
+++ b/configs/mlm_augmentation_config.json
@@ -5,18 +5,20 @@
     
     "masking_num" : 8,
 
-    "model_name" : "meenham/tapt-roberta-large-bs256-ep100",
+    "model_name" : "./augmentation/roberta_large_3epoch",
     
     "data_path" : { 
-        "train_path" : "./dataset/without_dup_train.csv",
+        "train_path" : "./dataset/total_train.csv",
         "val_path" : "./dataset/without_dup_dev.csv"
     },
 
-    "train_aug" : false,
+    "train_aug" : true,
 
     "threshold" : {
-        "train" : 900,
+        "train" : 1000,
         "val" : 100
-    }
+    },
+
+    "remove" : "['#','-','*']"
 
 }
