feat - Model - entity embedding 추가 (#31)
* feat - Model - add automatic verion increment for saving and loading

#16

* feat - Model - add entity embedding layer with seperate files

* feat - Model - minor import update

* feat - Model - add entity embedding files

#30

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@ prediction/klue_*.csv
 lightning_logs/*
 pipeline.ipynb
 
+### auto versioning files ###
+auto_train.py
+auto_inference.py
+configs/auto_config.json
+
+
 
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
